--- a/projeto-angular-1/src/app/app.component.html
+++ b/projeto-angular-1/src/app/app.component.html
@@ -4,3 +4,6 @@
 
 <p>ola</p>
 <a href="/projeto-angular-1/src/app/diretivas/diretivas.component.html">diretivas</a>
+
+<app-header></app-header>
+<app-diretivas></app-diretivas>
